--- a/nasa-client/build.gradle
+++ b/nasa-client/build.gradle
@@ -27,16 +27,9 @@ repositories {
 
 
 dependencies {
-    compile project(':nasa-client')
-
+    compile project(':common')
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.apache.commons:commons-lang3:3.7')
-    compile('commons-codec:commons-codec:1.11')
     compile('org.glassfish.jersey.core:jersey-client:2.27')
-    compile('org.glassfish.jersey.media:jersey-media-json-jackson:2.27')
-    compile('org.glassfish.jersey.core:jersey-common:2.27')
-    compile('org.glassfish.jersey.inject:jersey-hk2:2.27')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 jar {
